creted service token

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -26,3 +26,7 @@ springdoc:
     path: /api-docs
   swagger-ui:
     path: /
+
+carimbai:
+  hmac-secret: ${CARIMBAI_HMAC_SECRET:dev-secret-change-me}
+
