--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -32,8 +32,6 @@ springdoc:
 
 carimbai:
   hmac-secret: ${CARIMBAI_HMAC_SECRET:dev-secret-change-me}
-  policy:
-    use-location-policy: false   # ⚠️ OFF: políticas NÃO aplicadas ainda
-  rate-limiting:
+  stamps-needed: 10
+  rate-limit:
     seconds: 120
-
