--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -5,7 +5,7 @@ spring:
   application:
     name: carimbai
   flyway:
-    enabled: true
+    enabled: false
     locations: classpath:db.migration
     baseline-on-migrate: true
     validate-on-migrate: true
