--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -10,7 +10,7 @@ spring:
     baseline-on-migrate: true
     validate-on-migrate: true
   datasource:
-    url: ${DB_URL}
+    url: j${DB_URL}
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
     driver-class-name: ${DB_DRIVER:org.postgresql.Driver}
