--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
         <mapstruct.version>1.6.3</mapstruct.version>
 	</properties>
 	<dependencies>
+        <dependency>
+            <groupId>com.vladmihalcea</groupId>
+            <artifactId>hibernate-types-60</artifactId>
+            <version>2.21.1</version>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
