add security and login

--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -33,5 +33,9 @@ springdoc:
 carimbai:
   hmac-secret: ${CARIMBAI_HMAC_SECRET:dev-secret-change-me}
   stamps-needed: 10
+  stamps-default-needed: 10
   rate-limit:
     seconds: 120
+  jwt:
+    secret: ${CARIMBAI_JWT_SECRET:h9V$3uP!Qk2zA7mF@0sYwE4#RbT8nLjC}
+    expiration-seconds: 28800
