--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -34,3 +34,6 @@ carimbai:
   stamps-default-needed: 10
   rate-limit:
     seconds: 120
+  jwt:
+    secret: ${CARIMBAI_JWT_SECRET:h9V$3uP!Qk2zA7mF@0sYwE4#RbT8nLjC}
+    expiration-seconds: 28800
