--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,11 +1,6 @@
 spring:
-  output:
-    ansi:
-      enabled: ALWAYS
-  application:
-    name: carimbai
   flyway:
-    enabled: false
+    enabled: true
     locations: classpath:db.migration
     baseline-on-migrate: true
     validate-on-migrate: true
@@ -17,23 +12,8 @@ spring:
   jpa:
     hibernate:
       ddl-auto: none
-    show-sql: true
+    show-sql: false
     properties:
       hibernate:
         format_sql: true
         dialect: org.hibernate.dialect.PostgreSQLDialect
-springdoc:
-  api-docs:
-    path: /api-docs
-  swagger-ui:
-    path: /
-
-carimbai:
-  hmac-secret: ${CARIMBAI_HMAC_SECRET:dev-secret-change-me}
-  stamps-needed: 10
-  stamps-default-needed: 10
-  rate-limit:
-    seconds: 120
-  jwt:
-    secret: ${CARIMBAI_JWT_SECRET:h9V$3uP!Qk2zA7mF@0sYwE4#RbT8nLjC}
-    expiration-seconds: 28800
