--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,22 @@
 spring:
   profiles:
     active: ${SPRING_PROFILES_ACTIVE:dev}
+    output:
+        ansi:
+            enabled: ALWAYS
+    application:
+        name: carimbai
+springdoc:
+  api-docs:
+    path: /api-docs
+  swagger-ui:
+    path: /
+carimbai:
+  hmac-secret: ${CARIMBAI_HMAC_SECRET:dev-secret-change-me}
+  stamps-needed: 10
+  stamps-default-needed: 10
+  rate-limit:
+    seconds: 120
+  jwt:
+    secret: ${CARIMBAI_JWT_SECRET:h9V$3uP!Qk2zA7mF@0sYwE4#RbT8nLjC}
+    expiration-seconds: 28800
