--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,11 +1,11 @@
 spring:
   profiles:
     active: ${SPRING_PROFILES_ACTIVE:dev}
-    output:
-        ansi:
-            enabled: ALWAYS
-    application:
-        name: carimbai
+  output:
+      ansi:
+          enabled: ALWAYS
+  application:
+      name: carimbai
 springdoc:
   api-docs:
     path: /api-docs
@@ -17,6 +17,8 @@ carimbai:
   stamps-default-needed: 10
   rate-limit:
     seconds: 120
+  qr-ttl:
+    seconds: 90
   jwt:
     secret: ${CARIMBAI_JWT_SECRET}
     expiration-seconds: 28800
