--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>4.0.1</version>
+		<version>3.5.9</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.app</groupId>
@@ -30,6 +30,7 @@
 		<java.version>25</java.version>
         <mapstruct.version>1.6.3</mapstruct.version>
 		<lombok.version>1.18.40</lombok.version>
+		<swagger.version>2.8.9</swagger.version>
 	</properties>
 	<dependencies>
         <dependency>
@@ -94,15 +95,19 @@
             <artifactId>postgresql</artifactId>
         </dependency>
 		<!-- IMPORTANTE: Flyway agora precisa do starter -->
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-flyway</artifactId>-->
+<!--		</dependency>-->
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-flyway</artifactId>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-database-postgresql</artifactId>
 		</dependency>
         <!-- API Documentation -->
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>3.0.1</version>
+			<version>${swagger.version}</version>
         </dependency>
         <!-- boilerplate -->
 		<dependency>
