--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,5 +1,3 @@
-server:
-  port: 1234
 spring:
   flyway:
     enabled: true
@@ -7,9 +5,9 @@ spring:
     baseline-on-migrate: true
     validate-on-migrate: true
   datasource:
-    url: jdbc:postgresql://localhost:5434/carimbai
-    username: postgres
-    password: postgres
+    url: ${DB_URL}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
     driver-class-name: ${DB_DRIVER:org.postgresql.Driver}
   jpa:
     hibernate:
