--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,18 +13,18 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up JDK
-        uses: actions/setup-java@v3
+      - name: Set up JDK 25
+        uses: actions/setup-java@v4
         with:
-          java-version: '21' # O Maven vai buildar com 21, e sua VPS roda com 25 (sem problemas)
-          distribution: 'temurin'
+          java-version: '25' # O Maven vai buildar com 21, e sua VPS roda com 25 (sem problemas)
+          distribution: 'oracle'
           cache: maven
 
       - name: Build with Maven
         run: mvn clean package -DskipTests
 
       - name: Rename JAR to match Service
-        run: mv target/carimbai-0.0.1-SNAPSHOT.jar target/app.jar
+        run: mv target/carimbai-*.jar target/app.jar
 
       - name: Copy JAR to VPS
         uses: appleboy/scp-action@master
